tdf#114919: fix ods export in ODF 1.2 strict

See Valgrind trace here:
https://bugs.documentfoundation.org/attachment.cgi?id=147891
which contains bt

Due to a8b7c72425aabae87bfd2e141aa06f06319ae11c
"
add error to office:value-type for calc cells and fdo#51810
For cached value import we need the information which cells are error
cells. For ODF 1.2 extended we therefore export now calcext:office-value
with the additional value "error".
"

Change-Id: I13547ecc7ef8c1c4e1a236229d3b19d51f12470b
Reviewed-on: https://gerrit.libreoffice.org/65728
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 5534bfef6426128af2147de995224d7cdf43a2bf)